Fixed Home animation and (hopefully) fixed the static background on mobile

--- a/src/App+/App.css
+++ b/src/App+/App.css
@@ -6,7 +6,7 @@
     --header-height: 85vh;
 
     /* Home */
-    --exhibit-height: max(20vw, 8rem);
+    --exhibit-height: max(20vw, 9rem);
     --animation-time: 36s;
 
     --padding-top-bottom-header-image: 25vh;
