--- a/src/Home/Home.css
+++ b/src/Home/Home.css
@@ -3,7 +3,15 @@
 .header#Home {
     background-image: url("../images/Backgrounds/HomeBackground.jpg");
     background-repeat: no-repeat;
+
+    -moz-background-attachment: fixed;
+    -webkit-background-attachment: fixed;
+    -o-background-attachment: fixed;
     background-attachment: fixed;
+
+    -webkit-background-size: 100vmax 100%;
+    -moz-background-size: 100vmax 100%;
+    -o-background-size: 100vmax 100%;
     background-size: 100vmax 100%;
 }
 
@@ -64,11 +72,40 @@ h4.LastName {
     color: whitesmoke;
 }
 
+
+
 @media (prefers-reduced-motion: no-preference) { 
-    .ExhibitImg {
+    .ExhibitImgDiv {
         margin-top: calc(var(--header-height)/2 - 10vw);
         border-top-left-radius: 50%;
+        height: var(--exhibit-height);
         width: var(--exhibit-height);
+        background: rgb(255, 255, 255, 0.9);
+        overflow: hidden;
+        opacity: 0;
+
+        animation: ExhibitImgDivFade;
+        animation-duration: calc(8*var(--animation-time)/9);
+        animation-iteration-count: infinite;
+        animation-timing-function: ease-in-out;
+    }
+  }
+  @keyframes ExhibitImgDivFade {
+    5%, 10% {
+        opacity: 1;
+    }
+    11%, 90% {
+        opacity: 1;
+    }
+    95%, 100% {
+        opacity: 0;
+    }
+}
+
+@media (prefers-reduced-motion: no-preference) { 
+    .ExhibitImg {
+        height: 100%;
+        width: 100%;
         opacity: 0;
 
         animation: ExhibitFade;
@@ -81,7 +118,34 @@ h4.LastName {
     5%, 10% {
         opacity: 1;
     }
-    85%, 90% {
+    11%, 21% {
+        opacity: 1;
+    }
+    22%, 25% {
+        opacity: 0;
+    }
+    26%, 29% {
+        opacity: 1;
+    }
+    30%, 46% {
+        opacity: 1;
+    }
+    47%, 50% {
+        opacity: 0;
+    }
+    51%, 54% {
+        opacity: 1;
+    }
+    55%, 71% {
+        opacity: 1;
+    }
+    72%, 75% {
+        opacity: 0;
+    }
+    76%, 79% {
+        opacity: 1;
+    }
+    80%, 90% {
         opacity: 1;
     }
     95%, 100% {
@@ -117,9 +181,55 @@ h4.LastName {
     }
 }
 
-div.ExhibitText {
-    width: 100%;
-    height: 80%;
+@media (prefers-reduced-motion: no-preference) { 
+    .ExhibitText {
+        width: 100%;
+        height: 80%;
+        /* opacity: 1; */
+
+        animation: ExhibitTextFade;
+        animation-duration: calc(8*var(--animation-time)/9);
+        animation-iteration-count: infinite;
+        animation-timing-function: ease-in-out;
+    }
+  }
+  @keyframes ExhibitTextFade {
+    5%, 10% {
+        opacity: 1;
+    }
+    11%, 21% {
+        opacity: 1;
+    }
+    22%, 25% {
+        opacity: 0;
+    }
+    26%, 29% {
+        opacity: 1;
+    }
+    30%, 46% {
+        opacity: 1;
+    }
+    47%, 50% {
+        opacity: 0;
+    }
+    51%, 54% {
+        opacity: 1;
+    }
+    55%, 71% {
+        opacity: 1;
+    }
+    72%, 75% {
+        opacity: 0;
+    }
+    76%, 79% {
+        opacity: 1;
+    }
+    80%, 90% {
+        opacity: 1;
+    }
+    95%, 100% {
+        opacity: 0;
+    }
 }
 
 h5#ExhibitText {
@@ -212,7 +322,15 @@ h3#Home {
     width: calc(var(--exhibit-height)/1.25);
     background-image: url("../images/Backgrounds/HomeBackground.jpg");
     background-repeat: no-repeat;
+    
+    -moz-background-attachment: fixed;
+    -webkit-background-attachment: fixed;
+    -o-background-attachment: fixed;
     background-attachment: fixed;
+
+    -webkit-background-size: 100vmax 100%;
+    -moz-background-size: 100vmax 100%;
+    -o-background-size: 100vmax 100%;
     background-size: 100vmax 100%;
 }
 
